tests/NormalTests/paczka1/fuzzy1/36192624.err
Error in line 14: tHyp S646 55,0
Error in line 15: S646 S646 91,1
Error in line 18: tHyp A980 61,5
Error in line 22: tHyp S522 92,9
Error in line 30: vnGTKYmq S646 27,1
